--- a/evenementenoverzicht.html
+++ b/evenementenoverzicht.html
@@ -55,7 +55,7 @@
 				<h1>Revalidatie</h1>
 				<!--datum en tijd van evenementen van het lectoraat revalidatie wordt hieronder uitgewerkt-->
 				<div class="opmaakrevalidatie">				
-					<article>
+					<article class="margin2">
 						<h2>3 April 2019</h2>
 						<h2>10 Mei 2019</h2>
 						<h2>9 Juni 2019</h2>
@@ -93,7 +93,7 @@
 			<div id="evenementtechforhealth">
 				<h1>Technologie for health</h1>
 				<div class="opmaakrevalidatie"> 
-					<article>
+					<article class="margin3">
 						<h2>11 April 2019</h2>
 						<h2>20 Mei 2019</h2>
 						<h2>14 Juni 2019</h2>
